# crewai-core-concept-mover

./: .env  FINALIZED CT Lessons Tracker  - 2024-2025-2.csv  README.md  crewai_implementation_guide.md  extract_lesson_plans.py  lesson_plan_urls.json  main.py  pyproject.toml
src/common_core_sorter/: crew.py  main.py
src/common_core_sorter/config/: agents.yaml  tasks.yaml
src/common_core_sorter/tools/: custom_tool.py
